--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 	<meta charset="utf-8" />
 	<meta description="Proyecto de la primera generacion del 2014 del curso de diseño web online"/>
 	<title>Pusls2014: Comunidad de personas atractivas y sexy</title>
+	<link rel="stylesheet"  href="normalize.css"/>
+	<link rel="stylesheet"  href="estilos.css">
+
 </head>
 <body>	
 	<header>
