--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 	<meta charset="utf-8" />
 	<meta description="Proyecto de la primera generacion del 2014 del curso de diseño web online"/>
 	<title>Pusls2014: Comunidad de personas atractivas y sexy</title>
+	 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'> 
 	<link rel="stylesheet"  href="normalize.css"/>
 	<link rel="stylesheet"  href="estilos.css">
+
 
 </head>
 <body>	
@@ -29,7 +31,7 @@
 			<li><a href="#">CSS3</a></li>
 			<li><a href="#">Django</a></li>
 			<li id="publicar_nav">
-				<a href="#">Publicar</a>
+				<a href="#" class="icon-pencil">Publicar</a>
 			</li>
 		</ul>
 	</nav>
@@ -54,10 +56,10 @@
 
 			</div>
 			<div class="votacion">
-				<a href="#" class="up">up</a>
-				<a href="#" class="down">down</a>
+				<a href="#" class="up icon-f-arriba"></a>696
+				<a href="#" class="down icon-f-abajo"></a>
 				<a href="#" class="comentarios_item">3</a>
-				<a href="#" class="guardar_item">X</a>
+				<a href="#" class="guardar_item icon-star"></a>
 
 			</div>
 		</article>
@@ -82,11 +84,10 @@
 
 			</div>
 			<div class="votacion">
-				<a href="#" class="up">up</a>
-				<a href="#" class="down">down</a>
+				<a href="#" class="up icon-f-arriba"></a>696
+				<a href="#" class="down icon-f-abajo"></a>
 				<a href="#" class="comentarios_item">3</a>
-				<a href="#" class="guardar_item">X</a>
-
+				<a href="#" class="guardar_item icon-star"></a>
 			</div>
 		</article>
 		<article class="item">
@@ -109,11 +110,10 @@
 
 			</div>
 			<div class="votacion">
-				<a href="#" class="up">up</a>
-				<a href="#" class="down">down</a>
+				<a href="#" class="up icon-f-arriba"></a>696
+				<a href="#" class="down icon-f-abajo"></a>
 				<a href="#" class="comentarios_item">3</a>
-				<a href="#" class="guardar_item">X</a>
-
+				<a href="#" class="guardar_item icon-star"></a>
 			</div>
 		</article>
 		<article class="item">
@@ -136,11 +136,10 @@
 
 			</div>
 			<div class="votacion">
-				<a href="#" class="up">up</a>
-				<a href="#" class="down">down</a>
+				<a href="#" class="up icon-f-arriba"></a>696
+				<a href="#" class="down icon-f-abajo"></a>
 				<a href="#" class="comentarios_item">3</a>
-				<a href="#" class="guardar_item">X</a>
-
+				<a href="#" class="guardar_item icon-star"></a>
 			</div>
 		</article>
 		<article class="item">
@@ -163,11 +162,10 @@
 
 			</div>
 			<div class="votacion">
-				<a href="#" class="up">up</a>
-				<a href="#" class="down">down</a>
+				<a href="#" class="up icon-f-arriba"></a>696
+				<a href="#" class="down icon-f-abajo"></a>
 				<a href="#" class="comentarios_item">3</a>
-				<a href="#" class="guardar_item">X</a>
-
+				<a href="#" class="guardar_item icon-star"></a>
 			</div>
 		</article>
 		<article class="item">
@@ -190,11 +188,10 @@
 
 			</div>
 			<div class="votacion">
-				<a href="#" class="up">up</a>
-				<a href="#" class="down">down</a>
+				<a href="#" class="up icon-f-arriba"></a>696
+				<a href="#" class="down icon-f-abajo"></a>
 				<a href="#" class="comentarios_item">3</a>
-				<a href="#" class="guardar_item">X</a>
-
+				<a href="#" class="guardar_item icon-star"></a>
 			</div>
 		</article>
 		
