--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta description="Proyecto de la primera generacion del 2014 del curso de diseño web online"/>
+	<meta name="viewport" content="width=device-width minimun-scale=1, maximun-scale=1" >
 	<title>Pusls2014: Comunidad de personas atractivas y sexy</title>
 	 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'> 
 	<link rel="stylesheet"  href="normalize.css"/>
@@ -35,6 +36,14 @@
 			</li>
 		</ul>
 	</nav>
+	<aside>
+		<video width="320" height="240"  autoplay controls>
+ 			<source src="lecturas.mp4" type="video/mp4">
+  			<source src="lecturas.ogg" type="video/ogg">
+		<!-- Actualiza tu navegador -->
+		</video>
+	</aside>
+	
 	<section id="contenido">
 		<article class="item">
 			<figure class="imagen_item">
