--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
 	<meta description="Proyecto de la primera generacion del 2014 del curso de diseño web online"/>
 	<meta name="viewport" content="width=device-width minimun-scale=1, maximun-scale=1" >
 	<title>Pusls2014: Comunidad de personas atractivas y sexy</title>
-	 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'> 
+<!-- 	 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>  -->
 	<link rel="stylesheet"  href="normalize.css"/>
 	<link rel="stylesheet"  href="estilos.css">
 
+	<script src="prefixfree.js"></script>
+	
 
 </head>
 <body>	
@@ -36,13 +38,25 @@
 			</li>
 		</ul>
 	</nav>
+
+	<form action="" id="formulario" class="formulario">		
+		<input type="text" placeholder="Titulo" id="titulo" required>
+		<input type="url" placeholder="Link" id="link" required>
+		<input type="submit"  value="Agregar">
+	</form>
+
+
+
 	<aside>
-		<video width="320" height="240"  autoplay controls>
+		<div id="clima"></div>
+		<div id="geo"></div>
+		<video width="320" height="240" controls autoplay >
  			<source src="lecturas.mp4" type="video/mp4">
   			<source src="lecturas.ogg" type="video/ogg">
 		<!-- Actualiza tu navegador -->
 		</video>
 	</aside>
+	
 	
 	<section id="contenido">
 		<article class="item">
@@ -53,7 +67,7 @@
 				<a href="#">Aspen, un framework para Python</a>
 				
 			</h2>
-			<div class="autor_item">
+			<div class="autor_item spin">
 				por <a href="#"> Dario Ramirez</a>
 			</div>
 			<div class="datos_item">
@@ -213,8 +227,26 @@
 			mejorando.la 2014
 
 		</p>
+			<!-- ejemplo2 ajax.js -->
+		<div class="logos"></div>
 
 	</footer>
+	<!-- // <script type="jquery-1.11.0.min.js"></script> -->
+	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+	<script src="formulario.js"></script>
+	<script src="geo.js"></script>
+
+	<script >
+		// window.onload = function(){
+		// 	console.log("ya se disparo el evento OnLoad");
+		// }
+
+		$(function(){
+			  
+					// console.log('ya se disparo el evento DOMContentLoaded');
+		});
+	</script>	
+
 
 </body>
 </html>
