--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	</header>
 	<nav>
 		<ul>
-			<li><a href="#">Python</a></li>
+			<li><a href="#">.NET</a></li>
 			<li><a href="#">HTML5</a></li>
 			<li><a href="#">Javascript</a></li>
 			<li><a href="#">CSS3</a></li>
